fix: input css on iOS

--- a/base.css
+++ b/base.css
@@ -440,7 +440,9 @@ input[type="checkbox"] {
 	top: -2px;
 	border-radius: 0.5em;
 	-webkit-appearance: none;
+	appearance: none;
 	outline: none;
+	border: transparent;
 	margin: 0 0.6em 0 0;
 }
 
